CreationKit: Add user-specified warning blacklist

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -21,6 +21,7 @@ UI=true                             ; Replaces the warning window with a less in
 RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
 FaceFXDebugOutput=false             ; Enable verbose logging output when generating LIP files
 DisableWindowGhosting=false         ; Disable "Not Responding" overlay while performing certain tasks
+WarningBlacklist=false              ; In the log, hide specific warnings or errors produced by the vanilla game/DLC ESM files. See [CreationKit_Warnings] section.
 
 [CreationKit_FaceGen]
 DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
@@ -37,8 +38,154 @@ FontSize=10                         ; Size in points
 FontWeight=400                      ; Light (300), Regular (400), Medium (500), Bold (700)
 OutputFile=none                     ; Print log output to a file (i.e. "log.txt"). May cause UI lag on slow hard drives. To disable, set the value to "none".
 
-;
-; SKYRIM SETTINGS
-;
-[Game]
-Placeholder=false
+[CreationKit_Warnings]
+W0=Add new entries at the bottom of this list. Toggled by WarningBlacklist setting.
+W1=MASTERFILE: Potentially duplicate Land (000028df) encountered in file Dawnguard.esm.
+W2=MASTERFILE: Potentially duplicate Land (000028fd) encountered in file Dawnguard.esm.
+W3=QUESTS: Could not find previous info (02004DE6) for TopicInfo (02018B1D) in Topic "" (02004DAA).
+W4=QUESTS: Could not find previous info (02015C85) for TopicInfo (02015C86) in Topic "" (02004DAA).
+W5=QUESTS: Could not find previous info (02013721) for TopicInfo (02013722) in Topic "DLC1VQ03VampireShared" (020098B2).
+W6=QUESTS: Could not find previous info (0201329B) for TopicInfo (02013709) in Topic "DLC1VQ03VampireShared" (020098B2).
+W7=FORMS: Non-parent CONT form 'MerchantCaravanCChest' (0007434E) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W8=FORMS: Non-parent CONT form 'MerchantCaravanBChest' (0007434D) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W9=FORMS: Non-parent CONT form 'MerchantCaravanAChest' (0007434B) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W10=EDITOR: Editor ID 'DweRmSmCounter01Half' for STAT (03003F0D) is not unique, previous object (02003F0D) is type STAT. Editor ID will be set to 'DweRmSmCounter01HalfDUPLICATE001'.
+W11=FORMS: Non-parent REFR form 'WRShackDoor01' (000166A9) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W12=FORMS: Non-parent NAVM form '' (000CB4F4) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W13=FORMS: Non-parent NAVM form '' (000CB4F3) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W14=FORMS: Non-parent REFR form 'WETrigger' (00099C60) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W15=FORMS: Non-parent REFR form 'WETrigger' (0008F645) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W16=FORMS: Non-parent NAVM form '' (00101F29) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W17=FORMS: Non-parent NAVM form '' (00101F2B) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W18=FORMS: Non-parent NAVM form '' (00101F26) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W19=FORMS: Non-parent NAVM form '' (00101F30) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W20=FORMS: Non-parent NAVM form '' (00101F2F) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W21=FORMS: Non-parent NAVM form '' (00101F2E) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W22=FORMS: Non-parent NAVM form '' (00101F2D) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W23=FORMS: Non-parent NAVM form '' (00101F34) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W24=FORMS: Non-parent NAVM form '' (000EF63C) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W25=FORMS: Non-parent NAVM form '' (000EF63B) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W26=FORMS: Non-parent NAVM form '' (000EA181) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W27=FORMS: Non-parent NAVM form '' (001050E5) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W28=FORMS: Non-parent NAVM form '' (001050D4) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W29=FORMS: Non-parent NAVM form '' (00105A90) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W30=FORMS: Non-parent NAVM form '' (00105A8F) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W31=FORMS: Non-parent NAVM form '' (00105A8E) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W32=FORMS: Non-parent NAVM form '' (00105A8D) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W33=FORMS: Non-parent NAVM form '' (00105A75) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W34=FORMS: Non-parent NAVM form '' (00105A6E) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W35=FORMS: Non-parent NAVM form '' (000F2E24) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W36=FORMS: Non-parent NAVM form '' (000F13F4) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W37=FORMS: Non-parent NAVM form '' (000F13F3) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W38=FORMS: Non-parent NAVM form '' (000F13F2) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W39=FORMS: Non-parent NAVM form '' (000F065F) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W40=FORMS: Non-parent NAVM form '' (00108B64) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W41=FORMS: Non-parent NAVM form '' (00108B63) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W42=QUESTS: Could not find previous info (03003ECB) for TopicInfo (03003ECC) in Topic "RelationshipAdoption_SharedInfos" (03003D00).
+W43=QUESTS: Could not find previous info (03003EFE) for TopicInfo (03003EFF) in Topic "RelationshipAdoption_JustAdoptedBranchTopic" (03003D23).
+W44=QUESTS: Could not find previous info (0301770C) for TopicInfo (0301770D) in Topic "BYOHHousePalePurchaseTopic" (03017709).
+W45=FORMS: Non-parent IDLE form 'ReactionToPlayer' (0002F61F) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W46=EDITOR: Editor ID 'IdleChildCryingEnd' for IDLE (03018300) is not unique, previous object (020029D4) is type IDLE. Editor ID will be set to 'IdleChildCryingEndDUPLICATE001'.
+W47=EDITOR: Editor ID 'IdleChildCryingStart' for IDLE (030182FF) is not unique, previous object (020029D3) is type IDLE. Editor ID will be set to 'IdleChildCryingStartDUPLICATE001'.
+W48=EDITOR: Editor ID 'AnimObjectWoodScrap' for ANIO (03014352) is not unique, previous object (02013795) is type ANIO. Editor ID will be set to 'AnimObjectWoodScrapDUPLICATE001'.
+W49=EDITOR: Editor ID 'AnimObjectDrawBlade' for ANIO (0300A256) is not unique, previous object (02013794) is type ANIO. Editor ID will be set to 'AnimObjectDrawBladeDUPLICATE001'.
+W50=FORMS: Non-parent LCTN form 'SolitudeLocation' (00018A5A) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W51=FORMS: Non-parent LCTN form 'MarkarthLocation' (00018A59) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W52=FORMS: Non-parent LCTN form 'RiftenLocation' (00018A58) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W53=FORMS: Non-parent LCTN form 'WhiterunLocation' (00018A56) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W54=FORMS: Non-parent LCTN form 'MorthalLocation' (00018A53) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W55=FORMS: Non-parent LCTN form 'FalkreathLocation' (00018A49) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W56=FORMS: Non-parent SMBN form 'WIChangeLocationNode' (000A39C6) exists in both file 'HearthFires.esm' and 'Dawnguard.esm'
+W57=FORMS: Non-parent MGEF form 'VoiceFireBreathEffect1' (00020E16) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W58=EDITOR: Editor ID 'SummonValorTargetFXActivator' for ACTI (04028214) is not unique, previous object (020142BE) is type ACTI. Editor ID will be set to 'SummonValorTargetFXActivatorDUPLICATE001'.
+W59=EDITOR: Editor ID 'DLC1GroundAmbush01' for FURN (04034F98) is not unique, previous object (0200825D) is type FURN. Editor ID will be set to 'DLC1GroundAmbushDUPLICATE002'.
+W60=FORMS: Non-parent REFR form 'PickaxeMiningTableMarker' (0010D7F1) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W61=FORMS: Non-parent INFO form '' (000DE50E) exists in both file 'Dragonborn.esm' and 'HearthFires.esm'
+W62=FORMS: Non-parent INFO form '' (000B0EE9) exists in both file 'Dragonborn.esm' and 'HearthFires.esm'
+W63=QUESTS: Could not find previous info (04036A5F) for TopicInfo (04036A60) in Topic "" (04017E6A).
+W64=QUESTS: Could not find previous info (0402BA29) for TopicInfo (0402BA2A) in Topic "" (0402B9F9).
+W65=QUESTS: Could not find previous info (0402BA1A) for TopicInfo (0402BA19) in Topic "" (0402B9FB).
+W66=QUESTS: Could not find previous info (04035C0D) for TopicInfo (04038ABE) in Topic "" (0403177A).
+W67=QUESTS: Could not find previous info (04035BF8) for TopicInfo (04035BF9) in Topic "" (04032088).
+W68=QUESTS: Could not find previous info (0402BA22) for TopicInfo (0402BA23) in Topic "" (0403208A).
+W69=QUESTS: Could not find previous info (04035BFF) for TopicInfo (04035C00) in Topic "" (0403208D).
+W70=FORMS: Non-parent QUST form 'DA04' (0002D512) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W71=FORMS: Non-parent IDLE form 'IdleDrinkFountain' (00102012) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W72=EDITOR: Editor ID 'DraugrGroundLayExit' for IDLE (04034F9A) is not unique, previous object (020058AC) is type IDLE. Editor ID will be set to 'DraugrGroundLayExitDUPLICATE001'.
+W73=EDITOR: Editor ID 'DraugrGroundLayEnterInstant' for IDLE (04034F99) is not unique, previous object (020058AB) is type IDLE. Editor ID will be set to 'DraugrGroundLayEnterInstantDUPLICATE001'.
+W74=FORMS: Non-parent IDLE form 'DraugrSlouched2EnterInstant' (00089A92) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W75=EDITOR: Editor ID 'DraugrSummonedStart' for IDLE (04031DA0) is not unique, previous object (020023E5) is type IDLE. Editor ID will be set to 'DraugrSummonedStartDUPLICATE001'.
+W76=EDITOR: Editor ID 'DraugrSummonedStartRoot' for IDLE (04031D9F) is not unique, previous object (020023E4) is type IDLE. Editor ID will be set to 'DraugrSummonedStartRootDUPLICATE001'.
+W77=FORMS: Non-parent IDLE form 'EnterChairCHILDInstant' (001090B1) exists in both file 'Dragonborn.esm' and 'HearthFires.esm'
+W78=FORMS: Non-parent IDLE form 'IdleBlessingKneel' (000F11EC) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W79=FORMS: Non-parent IDLE form 'MountedBowZoom' (01000986) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W80=FORMS: Non-parent IDLE form 'AttackRightSide' (01000981) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W81=FORMS: Non-parent PERK form 'HackAndSlash90' (000C3679) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W82=FORMS: Non-parent PERK form 'HackAndSlash60' (000C3678) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W83=FORMS: Non-parent PERK form 'HackAndSlash30' (0003FFFA) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W84=FORMS: Non-parent PERK form 'Warmaster' (0003AFA7) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W85=FORMS: Non-parent LCTN form 'VirtualLocation' (00018ED2) exists in both file 'Dragonborn.esm' and 'HearthFires.esm'
+W86=FORMS: Non-parent LCTN form 'DeepFolkCrossingLocation' (000B2391) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W87=FORMS: Non-parent SMBN form 'WEQuestNode' (000896A8) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W88=FORMS: Non-parent SMBN form 'WIScriptEventBranchNode' (0006D1E6) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W89=FORMS: Non-parent SMBN form 'DungeonNode' (00030B13) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W90=FORMS: Non-parent SMQN form 'WICourierNodeSharesEvent' (00039FBD) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W91=FORMS: Non-parent SMEN form '(Uninitialized event node)' (0001320E) exists in both file 'Dragonborn.esm' and 'Dawnguard.esm'
+W92=EDITOR: Editor ID 'NPCHumanWorkbenchHammerDistant' for SNDR (04035C21) is not unique, previous object (03017ECC) is type SNDR. Editor ID will be set to 'NPCHumanWorkbenchHammerDistantDUPLICATE001'.
+W93=EDITOR: Editor ID 'NPCHumanWorkbenchHammer' for SNDR (04035C20) is not unique, previous object (03017ECB) is type SNDR. Editor ID will be set to 'NPCHumanWorkbenchHammerDUPLICATE001'.
+W94=MASTERFILE: Armor 'DLC01ReaperBracers' (0201A755) used invalid Biped Object slot 33 for race 'SkeletonRace'.
+W95=MASTERFILE: Unique ActorBase 'DLC01SoulCairnReaper' (0201A73E) has more than one reference in the world. Data access when unloaded may not work correctly.
+W96=MASTERFILE: Unable to find Package Target Reference (00000000) on owner object "DLC1VQ02SeranaPullLever".
+W97=MASTERFILE: Automatic door 'AutoLoadDoor01' (00015E1D) [324 units] in cell 'YngolBarrowExterior' has its teleport marker too close to the linked door.
+W98=MASTERFILE: Cell contains more than one water current marker:\r\n'Wilderness' (0000954C) (-12, 3) in WorldSpace 'Tamriel' (0000003C)
+W99=MASTERFILE: Automatic door 'WRShackDoorMinUse01' (0006767F) [48 units] in cell 'WhiterunExterior10' has its teleport marker too close to the linked door.
+W100=MASTERFILE: Automatic door 'AutoLoadDoor01' (0001779F) [125 units] in cell 'KarthwastenExterior03' has its teleport marker too close to the linked door.
+W101=MASTERFILE: Automatic door 'ShipTrapdoor01MinUseHidden' (00099315) [0 units] in cell 'Wilderness' has its teleport marker too close to the linked door.
+W102=MASTERFILE: Unable to find attach ref 02006718. Attach ref data will be removed.
+W103=MASTERFILE: Unable to find attach ref 02006718. Attach ref data will be removed.
+W104=MASTERFILE: Unable to find attach ref 02006718. Attach ref data will be removed.
+W105=MASTERFILE: Automatic door 'dunda14PortalDoor01' (0003DC3F) [287 units] in cell 'DA14Interior' has its teleport marker too close to the linked door.
+W106=MASTERFILE: Automatic door 'AutoLoadDoor01' (00015D12) [307 units] in cell 'WolfskullCave01' has its teleport marker too close to the linked door.
+W107=MASTERFILE: Automatic door 'HelgenKeep01btoExteriorREF' (000909D2) [275 units] in cell 'HelgenKeep01' has its teleport marker too close to the linked door.
+W108=MASTERFILE: Automatic door 'HelgenKeeptoExterior01REF' (0005DF95) [304 units] in cell 'HelgenKeep01' has its teleport marker too close to the linked door.
+W109=MASTERFILE: Occlusion box has < 16.0 half-extent and should be switched to a plane : REFR Form '' (02014641) to STAT form 'PlaneMarker' (00000017) in Cell 'DLC1DawnguardHQ01' (02001DBA)
+W110=MASTERFILE: Occlusion box has < 16.0 half-extent and should be switched to a plane : REFR Form '' (02014642) to STAT form 'PlaneMarker' (00000017) in Cell 'DLC1DawnguardHQ01' (02001DBA)
+W111=MASTERFILE: Cell contains more than one COC marker:\r\n'testFalmer' (0200362A)
+W112=MASTERFILE: Cell contains more than one COC marker:\r\n'testGiant' (02007D95)
+W113=MASTERFILE: Idle 'DraugrSummonedStartRoot' (020023E4) has no parent and is not an action root.
+W114=MASTERFILE: Multiple next idles for IDLE Form 'EnterTable' (00098C27).
+W115=MASTERFILE: Multiple next idles for IDLE Form 'EnterTable' (00098C27).
+W116=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W117=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W118=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W119=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W120=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W121=MASTERFILE: Multiple next idles for IDLE Form 'EnterTable' (00098C27).
+W122=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W123=MASTERFILE: Multiple next idles for IDLE Form 'EnterTable' (00098C27).
+W124=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W125=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W126=MASTERFILE: Multiple next idles for IDLE Form 'IdleCartTravelDriver' (00103446).
+W127=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W128=MASTERFILE: Multiple next idles for IDLE Form 'IdleCartTravelDriver' (00103446).
+W129=MASTERFILE: Multiple next idles for IDLE Form 'IdleCartTravelDriver' (00103446).
+W130=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W131=MASTERFILE: Multiple next idles for IDLE Form 'EnterTable' (00098C27).
+W132=MASTERFILE: Multiple next idles for IDLE Form 'IdleCartTravelDriver' (00103446).
+W133=MASTERFILE: Multiple next idles for IDLE Form 'IdleCartTravelDriver' (00103446).
+W134=MASTERFILE: Multiple next idles for IDLE Form 'IdleTGFalmerStatue' (000DBE41).
+W135=MASTERFILE: Multiple next idles for IDLE Form 'IdleCartTravelDriver' (00103446).
+W136=MASTERFILE: Invalid prev idle on IDLE Form 'DLC2_ChildSitOnKnees' (04031442)
+W137=MASTERFILE: Invalid prev idle on IDLE Form 'StonePickUpRoot' (04034EF0)
+W138=MASTERFILE: Invalid prev idle on IDLE Form 'IdleDLC02TentacleWordBurnRoot' (04039BAA)
+W139=SCRIPTS: Property Collision on script DLC1VampireLordBlockerSCRIPT on DLC1VampireLordBlocker (02014760) is pointing at an invalid object
+W140=QUESTS: Could not find previous info (02003ECB) for TopicInfo (02003ECC) in Topic "RelationshipAdoption_SharedInfos" (02003D00).
+W141=QUESTS: Could not find previous info (02003EFE) for TopicInfo (02003EFF) in Topic "RelationshipAdoption_JustAdoptedBranchTopic" (02003D23).
+W142=QUESTS: Could not find previous info (0201770C) for TopicInfo (0201770D) in Topic "BYOHHousePalePurchaseTopic" (02017709).
+W143=QUESTS: Could not find previous info (02036A5F) for TopicInfo (02036A60) in Topic "" (02017E6A).
+W144=QUESTS: Could not find previous info (0202BA29) for TopicInfo (0202BA2A) in Topic "" (0202B9F9).
+W145=QUESTS: Could not find previous info (0202BA1A) for TopicInfo (0202BA19) in Topic "" (0202B9FB).
+W146=QUESTS: Could not find previous info (02035C0D) for TopicInfo (02038ABE) in Topic "" (0203177A).
+W147=QUESTS: Could not find previous info (02035BF8) for TopicInfo (02035BF9) in Topic "" (02032088).
+W148=QUESTS: Could not find previous info (0202BA22) for TopicInfo (0202BA23) in Topic "" (0203208A).
+W149=QUESTS: Could not find previous info (02035BFF) for TopicInfo (02035C00) in Topic "" (0203208D).
